--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,17 @@ body {
     background-color: rgb(34, 6, 59);
 }
 
+.work-line {
+    display: flex;
+    justify-content: center;
+}
+
 .container {
     display: flex;
+    justify-content: start;
+    max-width: 960px;
+    flex-shrink: 0;
+    flex-wrap: wrap;
 }
 
 .square {
@@ -12,7 +21,7 @@ body {
     height: 16px;
     margin: 5px;
     border: 1px;
-    border-color: rgb(34, 6, 59)
+    border-color: rgb(34, 6, 59);
 }
 
 .topper,
